--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body style="text-align: center;background-color: #71b7f0ef ;">
 </style> <h1>BaleiaFin</h1>
-<img src="file:///home/thais/Downloads/baleiafin.webp" alt="Aqui tem uma imagem de uma balei fin">
+<img src="./baleiafin.webp" alt="Aqui tem uma imagem de uma baleia fin">
 </html>
 <p style="padding: 25px 200px;">A baleia-fin ( Balaenoptera physalus ) é uma enorme baleia de barbatanas . <br>
     É o segundo maior animal da Terra (a baleia-azul é o maior). <br>
