alterado cor texto

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </style> <h1>BaleiaFin</h1>
 <img src="./baleiafin.webp" alt="Aqui tem uma imagem de uma baleia fin">
 </html>
-<p style="padding: 25px 200px;">A baleia-fin ( Balaenoptera physalus ) é uma enorme baleia de barbatanas . <br>
+<p style="padding: 25px 200px; color:#29279bef">A baleia-fin ( Balaenoptera physalus ) é uma enorme baleia de barbatanas . <br>
     É o segundo maior animal da Terra (a baleia-azul é o maior). <br>
     Esta baleia é às vezes chamada de "galgo do mar" por causa de sua velocidade de natação rápida;ela pode nadar até 23 mph (37 km/h) em rajadas curtas. <br>
     A baleia-fin também é chamada de baleia-finback, finner, razorback, rorqual comum e baleia-arenque.
